--- a/.github/workflows/push-cargo.yml
+++ b/.github/workflows/push-cargo.yml
@@ -1,4 +1,4 @@
-name: Push Alpine
+name: Push Cargo 
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 jobs:
   push:
     runs-on: ubuntu-latest
-    name: Alpine Push Demo
+    name: Cargo Push Demo
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -22,10 +22,8 @@ jobs:
         with:
           api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
           command: "push"
-          format: "alpine"
+          format: "cargo"
           owner: "cloudsmith"
           repo: "actions"
-          distro: "alpine"
-          release: "v3.9"
           republish: "true" # needed ONLY if version is not changing
-          file: "test/fixture/cloudsmith-alpine-example-1.0.0-r0.apk" #real file that will repeat versions
+          file: "test/fixture/cloudsmith-cargo-example-0.1.0.crate"
