--- a/.github/workflows/push-raw.yml
+++ b/.github/workflows/push-raw.yml
@@ -1,4 +1,4 @@
-name: Push Alpine
+name: Push Raw
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 jobs:
   push:
     runs-on: ubuntu-latest
-    name: Alpine Push Demo
+    name: Raw File Push Demo
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -22,10 +22,12 @@ jobs:
         with:
           api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
           command: "push"
-          format: "alpine"
+          format: "raw"
           owner: "cloudsmith"
           repo: "actions"
-          distro: "alpine"
-          release: "v3.9"
-          republish: "true" # needed ONLY if version is not changing
-          file: "test/fixture/cloudsmith-alpine-example-1.0.0-r0.apk" #real file that will repeat versions
+          file: "test/fixture/raw_file.txt"
+          name: "Raw Test"
+          summary: "Github Action test of raw pushes"
+          description: "See https://github.com/cloudsmith-io/action"
+          version: ${{ github.sha }}
+          extra: "--sync-attempts 5"  # Testing extras
