--- a/.github/workflows/push-rpm.yml
+++ b/.github/workflows/push-rpm.yml
@@ -1,4 +1,4 @@
-name: Push Alpine
+name: Push RedHat/RPM
 
 on:
   push:
@@ -7,11 +7,10 @@ on:
   schedule:
     # run every 6 hours
     - cron: '0 0,6,12,18 * * *'
-
 jobs:
   push:
     runs-on: ubuntu-latest
-    name: Alpine Push Demo
+    name: RedHat/RPM Push Demo
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -22,10 +21,10 @@ jobs:
         with:
           api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
           command: "push"
-          format: "alpine"
+          format: "rpm"
           owner: "cloudsmith"
           repo: "actions"
-          distro: "alpine"
-          release: "v3.9"
+          distro: "any-distro"
+          release: "any-version"
           republish: "true" # needed ONLY if version is not changing
-          file: "test/fixture/cloudsmith-alpine-example-1.0.0-r0.apk" #real file that will repeat versions
+          file: "test/fixture/cloudsmith-rpm-example-1.0-1.x86_64.rpm" #real file that will repeat versions
