--- a/.github/workflows/push-alpine.yml
+++ b/.github/workflows/push-alpine.yml
@@ -19,8 +19,8 @@ jobs:
           api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
           command: "push"
           format: "alpine"
-          owner: "cloudsmith"
-          repo: "actions"
+          owner: "dikshant99"
+          repo: "interview-dikshant-verma"
           distro: "alpine"
           release: "v3.9"
           republish: "true" # needed ONLY if version is not changing
