--- a/.github/workflows/push-alpine.yml
+++ b/.github/workflows/push-alpine.yml
@@ -13,7 +13,7 @@ jobs:
           api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
           command: "push"
           format: "alpine"
-          owner: "dikshant99"
+          owner: "dikshant-verma/interview-dikshant-verma"
           repo: "interview-dikshant-verma"
           distro: "alpine"
           release: "v3.9"
