--- a/.github/workflows/push-debian.yml
+++ b/.github/workflows/push-debian.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches:
       - master
-  schedule:
-    # run every 6 hours
-    - cron: '0 0,6,12,18 * * *'
-
 jobs:
   push:
     runs-on: ubuntu-latest
@@ -15,7 +11,6 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-
       - name: Push
         id: push
         uses: ./
@@ -23,8 +18,8 @@ jobs:
           api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
           command: "push"
           format: "deb"
-          owner: "cloudsmith"
-          repo: "actions"
+          owner: "dikshant-verma"
+          repo: "interview-dikshant-verma"
           distro: "ubuntu"
           release: "xenial"
           republish: "true" # needed ONLY if version is not changing
