--- a/.github/workflows/push-alpine.yml
+++ b/.github/workflows/push-alpine.yml
@@ -16,6 +16,7 @@ jobs:
           owner: "dikshant-verma/interview-dikshant-verma"
           repo: "interview-dikshant-verma"
           distro: "alpine"
+          name: "alpine"
           release: "v3.9"
           republish: "true" # needed ONLY if version is not changing
           file: "test/fixture/cloudsmith-alpine-example-1.0.0-r0.apk"
