--- a/.github/workflows/push-alpine.yml
+++ b/.github/workflows/push-alpine.yml
@@ -19,5 +19,9 @@ jobs:
     - name: Upload Alpine package to Cloudsmith
       env:
         CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+        CLOUDSMITH_ORG: ${{ secrets.CLOUDSMITH_ORG }}
+        CLOUDSMITH_REPO: ${{ secrets.CLOUDSMITH_REPO }}
+        CLOUDSMITH_DISTRO: "alpine"  # Assuming the distribution is Alpine
+        CLOUDSMITH_RELEASE: "latest"  # Replace with the actual release version if known
       run: |
-        cloudsmith push alpine ${{ secrets.CLOUDSMITH_ORG }}/${{ secrets.CLOUDSMITH_REPO }} test/feature/*.apk --api-key $CLOUDSMITH_API_KEY
+        cloudsmith push alpine $CLOUDSMITH_ORG/$CLOUDSMITH_REPO/$CLOUDSMITH_DISTRO/$CLOUDSMITH_RELEASE test/feature/*.apk --api-key $CLOUDSMITH_API_KEY
