--- a/.github/workflows/push-alpine.yml
+++ b/.github/workflows/push-alpine.yml
@@ -22,6 +22,6 @@ jobs:
         CLOUDSMITH_ORG: ${{ secrets.CLOUDSMITH_ORG }}
         CLOUDSMITH_REPO: ${{ secrets.CLOUDSMITH_REPO }}
         CLOUDSMITH_DISTRO: "alpine"  # Assuming the distribution is Alpine
-        CLOUDSMITH_RELEASE: "latest"  # Replace with the actual release version if known
+        CLOUDSMITH_RELEASE: "v3.18"  # Replace with the actual release version if known
       run: |
         cloudsmith push alpine $CLOUDSMITH_ORG/$CLOUDSMITH_REPO/$CLOUDSMITH_DISTRO/$CLOUDSMITH_RELEASE test/fixture/*.apk --api-key $CLOUDSMITH_API_KEY
