--- a/.github/workflows/push-alpine.yml
+++ b/.github/workflows/push-alpine.yml
@@ -10,59 +10,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Build Alpine package in Docker
-      run: |
-        # Create a temporary directory for building the package
-        mkdir -p /tmp/build
-        cd /tmp/build
-        
-        # Create the APKBUILD file (example for a simple package)
-        cat > APKBUILD <<EOF
-        # Contributor: Your Name <your.email@example.com>
-        # Maintainer: Your Name <your.email@example.com>
-        pkgname=dummy-package
-        pkgver=1.0.0
-        pkgrel=0
-        pkgdesc="A dummy package for demonstration."
-        url="https://example.com/dummy-package"
-        arch="x86_64"
-        license="MIT"
-        depends=""
-        source=""
-        build() {
-          return 0
-        }
-        package() {
-          install -D /dev/null "\$pkgdir"/usr/bin/dummy-package
-        }
-        EOF
+      - name: Build Alpine package in Docker
+        run: |
+          # Create a temporary directory for building the package
+          mkdir -p /tmp/build
+          cd /tmp/build
 
-        # Build the package using Alpine Docker container
-        docker run --rm -v /tmp/build:/home/build -w /home/build alpine:3.14 /bin/sh -c "
-          apk update && apk add --no-cache alpine-sdk &&
-          abuild-keygen -a -i -n && \
-          cp /home/build/.abuild/*.rsa.pub /etc/apk/keys/ && \
-          abuild -r
-        "
+          # Create the APKBUILD file (example for a simple package)
+          cat > APKBUILD <<EOF
+          # Contributor: Your Name <your.email@example.com>
+          # Maintainer: Your Name <your.email@example.com>
+          pkgname=dummy-package
+          pkgver=1.0.0
+          pkgrel=0
+          pkgdesc="A dummy package for demonstration."
+          url="https://example.com/dummy-package"
+          arch="x86_64"
+          license="MIT"
+          depends=""
+          source=""
+          build() {
+              return 0
+          }
+          package() {
+              install -D /dev/null "$pkgdir"/usr/bin/dummy-package
+          }
+          EOF
 
-    - name: Install Cloudsmith CLI
-      run: |
-        pip install cloudsmith-cli
+          # Build the package using Alpine Docker container
+          docker run --rm -v /tmp/build:/home/build -w /home/build alpine:3.14 /bin/sh -c "
+            apk update && apk add --no-cache alpine-sdk &&
+            abuild-keygen -a -i -n &&
+            cp /home/build/.abuild/*.rsa.pub /etc/apk/keys/ &&
+            abuild -r
+          "
 
-    - name: Upload Alpine package to Cloudsmith
-      env:
-        CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
-        CLOUDSMITH_ORG: ${{ secrets.CLOUDSMITH_ORG }}
-        CLOUDSMITH_REPO: ${{ secrets.CLOUDSMITH_REPO }}
-        CLOUDSMITH_DISTRO: "alpine"
-        CLOUDSMITH_RELEASE: "v3.14"  # Ensure the release matches the Docker image version
-      run: |
-        # Find the built package
-        apk_path=$(find /tmp/build/packages -name "*.apk")
-        echo "Package built: $apk_path"
+      - name: Install Cloudsmith CLI
+        run: |
+          pip install cloudsmith-cli
 
-        # Upload the built package
-        cloudsmith push alpine $CLOUDSMITH_ORG/$CLOUDSMITH_REPO/$CLOUDSMITH_DISTRO/$CLOUDSMITH_RELEASE $apk_path --api-key $CLOUDSMITH_API_KEY
+      - name: Upload Alpine package to Cloudsmith
+        env:
+          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+          CLOUDSMITH_ORG: ${{ secrets.CLOUDSMITH_ORG }}
+          CLOUDSMITH_REPO: ${{ secrets.CLOUDSMITH_REPO }}
+          CLOUDSMITH_DISTRO: "alpine"
+          CLOUDSMITH_RELEASE: "v3.14"  # Ensure the release matches the Docker image version
+        run: |
+          # Find the built package
+          apk_path=$(find /tmp/build/packages -name "*.apk")
+          echo "Package built: $apk_path"
+
+          # Upload the built package
+          cloudsmith push alpine $CLOUDSMITH_ORG/$CLOUDSMITH_REPO/$CLOUDSMITH_DISTRO/$CLOUDSMITH_RELEASE $apk_path --api-key $CLOUDSMITH_API_KEY
