--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dummy-package",
+  "name": "assignment-1-package",
   "version": "1.0.0",
   "description": "A dummy package for demonstration.",
   "main": "index.js",
